# exca

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  script_bench.py  search.html  searchindex.js  test_recursive_discriminator_issue.py
.github/: CONTRIBUTING.md
.github/workflows/: documentation.yml  test-type-lint.yaml
_sources/: index.rst.txt
_sources/dev/: planned-work.md.txt
_sources/infra/: howto.md.txt  reference.rst.txt
_sources/steps/: items.md.txt
_static/: documentation_options.js
_static/css/: custom.css
dev/: planned-work.html
docs/: conf.py  conftest.py  index.rst
docs/_templates/: sidebar-nav-bs.html
docs/dev/: planned-work.md
docs/infra/: example_lightning.py  example_sklearn.py  explanation.md  howto.md  introduction.md  reference.rst  serialization.md  tutorials.md
docs/internal/bugs/: inflight-cleanup-slow.md
docs/internal/debug/: concurrent-writes.md  contiguous-memmap.md  mapinfra-call-overhead.md
docs/internal/proposals/: inflight-registry.md  items-archi-ideas.md
docs/internal/steps/: array_options_report.md  caching.md  chain_step_duality.md  func.md  item_uid_design.md  items_execution_model.md  map_design.md  map_options_report.md  spec.md  user_guide.md
docs/steps/: howto.md  index.md  items.md  reference.rst
exca/: __init__.py  base.py  cachedict.py  confdict.py  conftest.py  dumperloader.py  helpers.py  map.py  processors.py  slurm.py  task.py  test_base.py  test_cachedict.py  test_compat.py  test_confdict.py  test_dumperloader.py  test_helpers.py  test_localmap.py  test_locking.py  test_map.py  test_safeguard.py  test_submit.py  test_task.py  test_utils.py  test_workdir.py  utils.py  workdir.py
exca/cachedict/: __init__.py  contiguous.py  core.py  dumpcontext.py  dumperloader.py  handlers.py  inflight.py  registry.py  sqlite.py  test_cachedict.py  test_contiguous.py  test_dumpcontext.py  test_dumperloader.py  test_inflight.py  test_legacy_format.py  test_registry.py  test_sqlite.py
exca/cachedict/data/datadict/: jrapin-mbp-89461815-info.jsonl  jrapin-mbp-89461815.txt  mixed-1d770934.pkl
exca/cachedict/data/memmap/: jrapin-mbp-89461815-info.jsonl  jrapin-mbp-89461815.data
exca/cachedict/data/numpy_array/: jrapin-mbp-89461815-info.jsonl
exca/cachedict/data/pickle/: a_list-7d5f1973.pkl  jrapin-mbp-89461815-info.jsonl
exca/cachedict/data/string/: jrapin-mbp-89461815-info.jsonl  jrapin-mbp-89461815.txt
exca/chain/: __init__.py  steps.py  test_steps.py
exca/chain2/: SPEC.md  __init__.py  example_usage.py  infra.py  steps.py
exca/data/: compat-test-2024-11-12.pkl  fake-pyproject.toml
exca/data/cachedict2501/: .cache_type  x-9dd4e461.npy  y-41529076.npy
exca/remote_cache/: __init__.py  _fakes.py  base.py  huggingface.py  test_huggingface.py  test_remote_cache.py
exca/steps/: ARRAY_OPTIONS_REPORT.md  EXPANSION_DESIGN.md  MAP_OPTIONS_REPORT.md  SPEC.md  USER_GUIDE.md  __init__.py  backend_specs.md  backends.py  base.py  conftest.py  errors.py  helpers.py  identity.py  items.py  jobregistry.py  jobs.py  parallel.py  patterns.py  test_backends.py  test_cache.py  test_errors.py  test_helpers.py  test_items.py  test_map.py  test_map_step.py  test_old.py  test_parallel.py  test_patterns.py  test_perf.py  test_ported.py  test_specs.py  test_steps.py  test_utils.py  utils.py
infra/: explanation.html  getting-started.html  howto.html  introduction.html  reference.html  serialization.html  tutorials.html  user-guide.html
steps/: howto.html  index.html  items.html  reference.html
